--- a/kubernetes/llama-service.yaml
+++ b/kubernetes/llama-service.yaml
@@ -1,33 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: llama-exposed
   annotations:
-    metallb.universe.tf/address-pool: malwaretl-exposed
     metallb.universe.tf/loadBalancerIPs: 192.168.1.42
-  labels:
-    app.kubernetes.io/component: primary
-    app.kubernetes.io/instance: llama-cpp-server
-    app.kubernetes.io/name: llama-cpp-exposed
-  name: llama-cpp-server
-  namespace: llama
 spec:
-  allocateLoadBalancerNodePorts: true
-  externalTrafficPolicy: Cluster
-  internalTrafficPolicy: Cluster
-  ipFamilies:
-  - IPv4
-  ipFamilyPolicy: SingleStack
   ports:
-  - name: tcp-llama-exposed-api
-    port: 8000
-    protocol: TCP
-    targetPort: tcp-llama-api
+    - port: 8000
+      protocol: TCP
+      targetPort: llama-api-port
   selector:
-    app.kubernetes.io/component: primary
-    app.kubernetes.io/instance: llama-cpp-server
-    app.kubernetes.io/name: llama-cpp-server
-  sessionAffinity: None
+    app: llama-cpp-server
   type: LoadBalancer
+
 ---
 apiVersion: v1
 kind: Service
@@ -40,6 +25,7 @@ spec:
   - port: 8000
     name: tcp-llama-api
     protocol: TCP
+    targetPort: llama-api-port
   type: NodePort
   selector:
     app: llama-cpp-server
